--- a/app/src/main/res/layout/activity_hello_world.xml
+++ b/app/src/main/res/layout/activity_hello_world.xml
@@ -24,4 +24,15 @@
         android:id="@+id/txtOutput"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CLICK HERE INSTEAD!"
+        android:id="@+id/btnSaySomething"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="65dp"
+        android:nestedScrollingEnabled="false"
+        android:onClick="saySomething" />
 </RelativeLayout>
